--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
       <div class="container" data-aos="zoom-out">
         <div class="row justify-content-center">
           <div class="col-lg-9">
+            <img
+        src="auliaaa.jpg"
+        alt="Aul"
+        width="200"
+        class="rounded-circle img-thumbnail"
+      />
             <h2>Evi Aulia</h2>
             <p>I'm <span class="typed" data-typed-items="Software Engineer, Intrepreneur">Designer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
